--- a/contact.css
+++ b/contact.css
@@ -7,6 +7,7 @@ body{
 }
 
 #LOGO h1{
+    text-shadow: 1px 1px 2px red; 
     margin-left: 35px;
     font-size: 40px;
     text-align: left;
@@ -152,4 +153,28 @@ footer {
     background-position: 0% 0%;
     position: fixed;
     bottom: 0pt;
+}
+
+#contact_l{
+    height: 300px;
+    width: 100%;
+    clear: both;
+    float: left;
+    color: #ec006a;
+    text-align: center;
+    letter-spacing: 150px;
+}
+
+#contact_info{
+    clear: both;
+    width: 100%;
+    height: 200px;
+    font-size: 35px;
+    font-family: 'Roboto Thin';
+    color: whitesmoke;
+    text-align: center;
+}
+
+#contact_info > p > span{
+    text-decoration: underline;
 }
