--- a/log_in.css
+++ b/log_in.css
@@ -170,3 +170,34 @@ body{
     float: left;
     width: 35%;
 }
+
+#footer1 {
+    color: whitesmoke;
+    font-family: 'Roboto Thin';
+    text-align: right;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    right: 0pt;
+}
+
+#footer1 > a{
+    color: #FA8072;
+    text-decoration: none;
+}
+
+#footer1 > a:hover{
+    color: red;
+    text-decoration: none;
+}
+
+footer {
+    color: whitesmoke;
+    font-family: 'Roboto Thin';
+    text-align: center;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+}
