--- a/sign_in.css
+++ b/sign_in.css
@@ -183,6 +183,35 @@ width: 50%;
 float: left;
 text-align: center;
 width: 50%;
+}
 
+#footer1 {
+    color: whitesmoke;
+    font-family: 'Roboto Thin';
+    text-align: right;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    right: 0pt;
+}
 
+#footer1 > a{
+    color: #FA8072;
+    text-decoration: none;
+}
+
+#footer1 > a:hover{
+    color: red;
+    text-decoration: none;
+}
+
+footer {
+    color: whitesmoke;
+    font-family: 'Roboto Thin';
+    text-align: center;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
 }
